<resources>
    <string name="app_name">VETCARE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bieLblSaludo">Hola: </string>
    <!--Usuario-->
    <string name="regTxtNombre">Nombres</string>
    <string name="regTxtApellido">Apellidos</string>
    <string name="regTxtTelefono">Número de teléfono</string>
    <string name="regTxtCorreo">Correo electrónico</string>
    <!--Mascota-->
    <string name="regTxtNombreMascota">Nombre</string>
    <string name="regTxtEdadMascota">Edad</string>
    <string-array name="opciones_lista">
        <item>Perro</item>
        <item>Gato</item>
        <item>Otro</item>
    </string-array>
    <string name="regTxtRazaMascota">Raza</string>
    <!--secion-->
    <string name="logTxtCorreo">Correo</string>
    <string name="logTxtClave">Contraseña</string>
    <string name="logBtnIngresar">Ingresar</string>
    <string name="logBtnRegistrate">Registrate</string>
    <string name="logChkRecordar">Recordar sesión</string>
    <string name="logBtnSOS">SOS</string>
    <string name="logLblOlvidasteContraseña">¿Olvidate tu contraseña</string>
    <!--Olvidaste Contraseña-->
    <string name="olvTxtRecuperar">Recupera tu contraseña</string>
    <string name="olvTxtInstrucciones">Coloca tu número de teléfono.\nTe enviaremos un SMS con un código para continuar.</string>
    <string name="olvTxtTelefono">Número de teléfono</string>
    <string name="olvBtnEnviar">Enviar</string>
    <!--Confirmar Codigo-->
    <string name="cfrTxtVerificar">Verificar tu identidad</string>
    <string name="cfrTxtInstruccionCodigo">Ingresa el código de seis digitos</string>
    <string name="cfrTxtCodigo">Codigo</string>
    <string name="cfrBtnVerificar">Verificar</string>
</resources>