<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frg_container_perfilMascota"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.fragmentos.perfilMascotaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginHorizontal="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Información de la mascota"
            android:textColor="@color/titulo"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="35sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="25dp">

            <ImageView
                android:id="@+id/imagenMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="mascota seleccionada"
                android:src="@drawable/user_mascota" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/editar"
                android:layout_marginLeft="45dp"
                android:contentDescription="iconoEditar"
                android:background="#0000"/>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/regTxtNombreMascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtNombreMascota"
                android:maxLength="100"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtEdadMascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtEdadMascota"
                android:layout_marginVertical="10dp"
                android:maxLength="100"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/chbTipoMascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Selecciona una opción"
                android:paddingVertical="20dp"
                android:fontFamily="@font/poppins_medium"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtRazaMascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtRazaMascota"
                android:layout_marginVertical="10dp"
                android:maxLength="100"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</FrameLayout>