<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.fragmentos.perfilUsuarioFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginHorizontal="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Perfil"
            android:textColor="@color/titulo"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="35sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="15dp">

            <ImageView
                android:id="@+id/imagenUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="iconoUser"
                android:src="@drawable/user" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/editar"
                android:layout_marginLeft="45dp"
                android:contentDescription="iconoEditar"
                android:background="#0000"/>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/regTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtNombre"
                android:maxLength="100"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtApellido"
                android:layout_marginVertical="10dp"
                android:maxLength="100"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtTelefono"
                android:maxLength="9"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtCorreo"
                android:layout_marginVertical="10dp"
                android:maxLength="100"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mis mascotas"
            android:textColor="@color/titulo"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginVertical="10dp"
            android:textSize="20sp"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="16dp">

                <ImageButton
                    android:id="@+id/btnInfoMascota"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/perro1_95x70"
                    android:scaleType="centerCrop"
                    android:contentDescription="Mascota 1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Segunda imagen (centrada) -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"> <!-- Espaciado a los lados -->

                <ImageButton
                    android:id="@+id/btnInfoMascota2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/gato1_95x70"

                    android:scaleType="centerCrop"
                    android:contentDescription="Mascota 2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wilson"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">


                <ImageButton
                    android:id="@+id/btnAgregarMascota"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/plus_mascota"

                    android:scaleType="centerCrop"
                    android:contentDescription="Añadir mascota" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agregar"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center" />
            </LinearLayout>
        </GridLayout>

    </LinearLayout>


</FrameLayout>